<resources>
    <string name="app_name">My Records</string>

    <!-- My Records Fragment -->
    <string name="title_my_records_fragment">\@testotesto</string>

    <!-- Profile Fragment -->
    <string name="title_profile_fragment">Edit profile</string>
    <string name="change_photo_label">Change photo</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="biography_label">Biography</string>

    <!-- Camera Fragment -->
    <string name="title_camera_fragment">Take a photo</string>
    <string name="save_photo_label">Save photo</string>

    <!-- Item -->
    <string name="sang_label">sang</string>
    <string name="favourite_label">Like</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_save_profile">Save profile</string>
    <string name="action_pick_photo">Pick from gallery</string>

    <!-- Default -->
    <string name="default_username">TestAndroide</string>
    <string name="default_biography">Esta es mi biografía</string>
    <string name="default_song_description">Secreto</string>
    <string name="content_description">None</string>
</resources>
