<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.sb.myrecords.data.entities.User" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.profile.ProfileFragment">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/profile_size"
            android:layout_height="@dimen/profile_size"
            android:layout_margin="@dimen/image_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description"
            app:layout_constraintBottom_toTopOf="@id/change_photo_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImageFromUrl="@{user.img}"
            tools:src="@drawable/ic_profile_placeholder" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_small"
            android:text="@string/change_photo_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <LinearLayout
            android:id="@+id/profile_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_photo_button">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_margin_big"
                android:hint="@string/name_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{user.name}"
                    tools:text="@string/default_username" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_margin_big"
                android:hint="@string/username_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{user.username}"
                    tools:text="@string/title_my_records_fragment" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_margin_big"
                android:hint="@string/biography_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/biography_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@{user.biography}"
                    tools:text="@string/default_biography" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>