<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="record"
            type="com.sb.myrecords.data.entities.Record" />

    </data>

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        app:cardCornerRadius="@dimen/default_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/card_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/card_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/default_margin_small"
                    android:contentDescription="@string/content_description"
                    android:scaleType="centerCrop"
                    app:profileImageFromUrl="@{record.profile.img}"
                    tools:src="@drawable/ic_profile_placeholder" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin_small"
                    android:text="@{record.profile.name}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/design_default_color_on_primary"
                    tools:text="@string/default_username" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin_small"
                    android:text="@string/sang_label"
                    android:textColor="@color/design_default_color_background" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin_small"
                    android:text="@{record.description}"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/design_default_color_on_primary"
                    tools:text="@string/default_song_description" />

            </LinearLayout>

            <ImageView
                android:id="@+id/card_body"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/content_description"
                android:onClick="@{clickListener}"
                android:scaleType="fitXY"
                app:imageFromUrl="@{record.previewImg}"
                app:layout_constraintBottom_toTopOf="@id/card_bottom"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_header" />

            <LinearLayout
                android:id="@+id/card_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_body">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin_small"
                    android:drawableStart="@drawable/ic_favourite_border"
                    android:drawablePadding="@dimen/default_margin_small"
                    android:gravity="center_vertical"
                    android:text="@string/favourite_label"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="@color/design_default_color_background" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>